feat: First Homolog

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+spring.profiles.active=${APP_PROFILE:test}
+
 spring.jpa.open-in-view=false
 
-#vai rodar o projeto no perfil de testes no banco h2
-spring.profiles.active=test
+#spring.jpa.open-in-view=false
+
+#vai rodar o projeto no perfil de testes no banco h2 colocando test
+#vai rodar o projeto no perfil de dev no postgres colocando dev
+#spring.profiles.active=dev
